--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon sever"
+    "server": "nodemon sever",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Mostafa Esmaeili",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "browserlist": "^1.0.1",
+    "browserslist": "^4.6.3",
     "config": "^3.1.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
